# VIOLA-LeROBO

./: README.md  pyproject.toml  requirements.txt
configs/: finetune.yaml  pretrain.yaml
data/: augmentation.py  dataset.py
deploy/: inference.py
scripts/: finetune.py  preprocess.py  pretrain.py  train_common.py
src/viola_so101/: __init__.py  config.py  context_encoder.py  deploy.py  gmm_head.py  inspect_dataset.py  logging_utils.py  policy.py  positional_encoding.py  preprocess.py  proposals.py  region_encoder.py  transformer_policy.py
src/viola_so101/data/: __init__.py  augmentation.py  dataset.py
src/viola_so101/train/: __init__.py  finetune.py  loop.py  pretrain.py
tests/: smoke_test.py  test_smoke.py  test_train_dryrun.py
viola/: config.py  context_encoder.py  gmm_head.py  policy.py  positional_encoding.py  proposals.py  region_encoder.py  transformer_policy.py
